# Anomaly-Detection-WebApp

./: README.md  README2.md  package-lock.json  package.json
controller/: ResultJson.js  expServer.js  package-lock.json  package.json  server.js
model/: AnomalyDetectionModel.js  SearchInFile.js  SimpleAnomalyDetector.js  anomalies.json  anomaly_detection_util.js  binding.gyp  expServer.js  package-lock.json  package.json  text.txt  timeseries.js
model/src/: AnomalyDetector.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  main.cpp  main.h  makefile  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
view/: index.html  package-lock.json  package.json
view/src/: App.css  App.js  Example2.js  ResultJson.js  aTemp.js  anomalies.json  anomalyTemp.json  data.json  index.html  index.js  selectList.js
